--- a/app.css
+++ b/app.css
@@ -18,14 +18,14 @@ body {
 }
 
 .title {
-  font-family: Quicksand;
+  font-family: "Quicksand";
   font-size: 64px;
   color: #9B9B9B;
   text-align: center;
 }
 
 .subtitle {
-  font-family: Quicksand;
+  font-family: "Quicksand";
   font-size: 32px;
   color: #C6C6C6;
   text-align: center;
