--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
 @charset "utf-8"
-@import url(https://fonts.googleapis.com/css?family=Quicksand);
+@import url(https://fonts.googleapis.com/css?family=Quicksand|Ubuntu);
 
 html, body, .wrapper {
   margin: 0;
@@ -18,14 +18,14 @@ body {
 }
 
 .title {
-  font-family: "Quicksand";
+  font-family: "Ubuntu";
   font-size: 64px;
   color: #9B9B9B;
   text-align: center;
 }
 
 .subtitle {
-  font-family: "Quicksand";
+  font-family: "Ubuntu";
   font-size: 32px;
   color: #C6C6C6;
   text-align: center;
