--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
-@charset "utf-8"
-@import url(//fonts.googleapis.com/css?family=Quicksand:400);
+@charset "utf-8";
+@import url(//fonts.googleapis.com/css?family=Quicksand);
 
 html, body, .wrapper {
   margin: 0;
