--- a/app.css
+++ b/app.css
@@ -1,14 +1,20 @@
 @charset "utf-8";
 @import url(//fonts.googleapis.com/css?family=Quicksand);
 
+html {
+  min-height: 100%;
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-flow: column;
+}
+
 html, body {
   margin: 0;
   padding: 0;
   border: 0;
-  display: flex;
-  flex-flow: column;
-  min-height: 100%;
-  height: 100%;
 }
 
 body {
