--- a/app.css
+++ b/app.css
@@ -1,6 +1,16 @@
 @charset "utf-8";
 @import url(//fonts.googleapis.com/css?family=Quicksand);
 
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.cf:after {
+    clear: both;
+}
+
 html {
   min-height: 100%;
   height: 100%;
