--- a/app.css
+++ b/app.css
@@ -11,11 +11,6 @@
     clear: both;
 }
 
-html {
-  min-height: 100%;
-  height: 100%;
-}
-
 body {
   display: flex;
   flex-flow: column;
@@ -25,6 +20,12 @@ html, body {
   margin: 0;
   padding: 0;
   border: 0;
+  min-height: 100%;
+}
+
+html {
+  min-height: 100%;
+  height: 100%;
 }
 
 body {
@@ -62,4 +63,9 @@ body {
 
 .wrapper {
   flex: 1;
+}
+
+.tul {
+    margin: 0;
+    margin-bottom: 0.5em;
 }
