--- a/app.css
+++ b/app.css
@@ -83,8 +83,8 @@ body {
 .tul li {
     border-radius: 50%;
     background: #C6C6C6;
-    width: 1.5em;
-    height: 1.5em;
+    width: 80px;
+    height: 80px;
 }
 
 .tul .on, .i {
