--- a/app.css
+++ b/app.css
@@ -52,7 +52,6 @@ body {
 }
 
 .wrapper {
-  padding: 20%;
   flex: 1;
 }
 
@@ -63,21 +62,23 @@ body {
 }
 
 .tul li {
-  display: inline-block;
+  display: block;
+  margin: auto;
   border-radius: 50%;
   background: #C6C6C6;
   width: 80px;
   height: 80px;
 }
 
-.tul .on, .ind {
+.tul .on {
   background: #71afed;
 }
 
 .ind {
-    border: medium #f0f0f0;
-    border-radius: 50% ;
-    color: #f0f0f0;
-    width: 80px;
-    height: 80px;
+  background: #71afed;
+  border: medium #f0f0f0;
+  border-radius: 50%;
+  font-family: 'Quicksand';
+  font-size: 64px;
+  text-align: center;
 }
