--- a/app.css
+++ b/app.css
@@ -76,7 +76,7 @@ body {
 
 .ind {
   background: #71afed;
-  border: medium #f0f0f0;
+  border: thick #f0f0f0;
   border-radius: 50%;
   font-family: 'Quicksand';
   font-size: 64px;
