--- a/app.css
+++ b/app.css
@@ -56,6 +56,7 @@ body {
 }
 
 .tul {
+  display: block;
   margin: 0;
   margin-bottom: 60px;
   list-style-type: none;
@@ -71,7 +72,7 @@ body {
 }
 
 .tul li {
-  display: block;
+  display: inline;
   margin: auto;
   border-radius: 50%;
   background: #C6C6C6;
