--- a/app.css
+++ b/app.css
@@ -84,3 +84,13 @@ body {
   background: #71afed;
 }
 
+@media screen and (max-width: 640px) {
+  .tul li {
+    width: 40px;
+    height: 40px;
+  }
+  
+  .ind {
+    font-size: 32px;
+  }
+}
