--- a/app.css
+++ b/app.css
@@ -49,6 +49,16 @@ body {
 
 .footer {
   padding: 24px;
+  background: #C6C6C6;
+}
+.footer:before {
+  content: " ";
+  display: block;
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #C6C6C6;
 }
 
 .wrapper {
@@ -92,6 +102,5 @@ body {
   
   .ind {
     font-size: 32px;
-    vertical-align: center;
   }
 }
