--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url(//fonts.googleapis.com/css?family=Quicksand);
+@import url(//fonts.googleapis.com/css?family=Quicksand|Oxigen);
 
 body {
   display: flex;
@@ -51,6 +51,12 @@ body {
   padding: 24px;
   background: #C6C6C6;
   position: relative;
+  font: 16px "Oxigen";
+  color: #f0f0f0;
+}
+.footer a {
+  text-decoration: none;
+  color: #71afed;
 }
 .footer:before {
   position: absolute;
