--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url(//fonts.googleapis.com/css?family=Quicksand|Oxigen);
+@import url(//fonts.googleapis.com/css?family=Quicksand|Oxygen);
 
 body {
   display: flex;
@@ -51,7 +51,7 @@ body {
   padding: 24px;
   background: #C6C6C6;
   position: relative;
-  font: 16px "Oxigen";
+  font: 16px "Oxygen";
   color: #f0f0f0;
 }
 .footer a {
